--- a/pages/globals.css
+++ b/pages/globals.css
@@ -9,7 +9,8 @@
   margin: 0;
 }
 
-:root{
+/* For Firefox scrollbar */
+:root {
   scrollbar-color: #212c49 #f1f1f1 !important;
   scrollbar-width: thin !important;
 }
@@ -67,7 +68,6 @@ a {
 ::-webkit-scrollbar {
   width: 10px;
 }
-
 
 /* Track */
 ::-webkit-scrollbar-track {
