--- a/pages/globals.css
+++ b/pages/globals.css
@@ -39,6 +39,9 @@ a {
   .btn-secondary {
     @apply text-brand-800 font-semibold rounded-xl border-2 border-brand-700 bg-transparent;
   }
+  .btn-warning{
+    @apply text-white font-semibold rounded-xl border-2 bg-red-700;
+  }
 }
 
 /* Used to changee the background color of MUI datepicker component (day selected) */
