--- a/pages/globals.css
+++ b/pages/globals.css
@@ -46,7 +46,7 @@ a {
 
 /* Used to changee the background color of MUI datepicker component (day selected) */
 .Mui-selected {
-  background-color: #212c49 !important;
+  background-color: #465b81 !important;
 }
 
 .hover-underline-animation {
