--- a/pages/globals.css
+++ b/pages/globals.css
@@ -26,6 +26,36 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+h4 {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+h5 {
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+h6 {
+  font-size: 0.75rem;
+  font-weight: 700;
+}
+
 @layer components {
   .btn {
     @apply inline-flex items-center justify-center px-6 py-[0.65rem] text-sm rounded cursor-pointer border focus:outline-none font-semibold;
