feat: add custom handwritten font to certificate + background pattern

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -241,3 +241,12 @@ ol {
 .blocklyFlyoutBackground {
   fill: #edf2f7;
 }
+
+.background-zigzag3d-pattern {
+  background-color: #edf2f7;
+  opacity: 0.15;
+  background: linear-gradient(135deg, #a7bfdc55 25%, transparent 25%) -40px 0/ 80px 80px,
+    linear-gradient(225deg, #a7bfdc 25%, transparent 25%) -40px 0/ 80px 80px,
+    linear-gradient(315deg, #a7bfdc55 25%, transparent 25%) 0px 0/ 80px 80px,
+    linear-gradient(45deg, #a7bfdc 25%, #edf2f7 25%) 0px 0/ 80px 80px;
+}
